syntax = "proto3";

package fulfillment;
option go_package = "/proto;fulfillment";

service FulfillmentService {
  rpc AssignDelivery (AssignDeliveryPartnerRequest) returns (AssignDeliveryResponse);
  rpc UpdateDeliveryStatus (UpdateDeliveryStatusRequest) returns (UpdateDeliveryStatusResponse);
}

message AssignDeliveryPartnerRequest {
  int64 order_id = 1;
}

message UpdateDeliveryStatusRequest {
  int64 delivery_id = 1;
  string status = 2;
}

message AssignDeliveryResponse {
  int64 delivery_id = 1;
  int64 order_id = 2;
  int64 customer_id = 3;
  string delivery_Address = 4;
  string status = 5;
}

message UpdateDeliveryStatusResponse {
  string updated_Status = 2;
}

/*
GRPC SERVICE
1. AssignDeliveryPartner
  --->delivery_id = Autogenerated
  ->order_id (which order)
  ->customer_id (which customer)
  ->delivery_Address (where to deliver)
  --->status (pending, assigned, delivered) AUTO UPDATED IN THE CALL

2. When Order is been Delivered
  ->delivery_id
  ->status (delivered)
  --->updated_Status (delivered)
 */